adjust heading size and weight to compensate for new fix to inconsistent h4 & h5 letter-spacing

--- a/theme.css
+++ b/theme.css
@@ -135,7 +135,7 @@ settings:
 
 /* 
 	Velocity 
-	1.2.0-alpha
+	1.3.0-beta
 	--------
 	by Floodlight
 
@@ -265,23 +265,23 @@ body {
 	--h1-color: var(--color-base-100);
 	--h2-color: var(--color-base-100);
 	--h3-color: var(--color-base-100);
-	--h4-color: var(--color-base-100);
-	--h5-color: var(--text-normal);
-	--h6-color: var(--text-muted);
-	--h1-weight-alt: 600;
+	--h4-color: var(--color-base-90);
+	--h5-color: var(--color-base-80);
+	--h6-color: var(--color-base-70);
+	--h1-weight-alt: 575;
 	--h1-size-alt: 1.75em;
 	--h1-size: 2.125em;
 	--h2-size: 1.5625em;
-	--h3-size: 1.4375em;
-	--h4-size: 1.1875em;
-	--h5-size: 1.0625em;
+	--h3-size: 1.4125em;
+	--h4-size: 1.2125em;
+	--h5-size: 1.0875em;
 	--h6-size: 1em;
 	--h1-weight: 325;
 	--h2-weight: 575;
 	--h3-weight: 575;
-	--h4-weight: 675;
-	--h5-weight: 725;
-	--h6-weight: 725;
+	--h4-weight: 650;
+	--h5-weight: 675;
+	--h6-weight: 700;
 	
 	--header-height: 52px;
 	
@@ -989,13 +989,13 @@ body:not(.mod-windows, .mod-linux) {
 	--font-semibold: 600;
 	--font-bold: 700;
 	--font-extrabold: 800;
-	--h1-weight-alt: 550;
+	--h1-weight-alt: 525;
 	--h1-weight: 275;
 	--h2-weight: 525;
 	--h3-weight: 525;
-	--h4-weight: 625;
-	--h5-weight: 675;
-	--h6-weight: 675;
+	--h4-weight: 600;
+	--h5-weight: 625;
+	--h6-weight: 650;
 	/* frame spacing and autohide override */
 	--frame-right-space-override: 36px;
 	--frame-left-space-override: 80px;
@@ -1022,9 +1022,9 @@ body:not(.mod-windows, .mod-linux) {
 	--h1-weight: 300;
 	--h2-weight: 550;
 	--h3-weight: 550;
-	--h4-weight: 650;
-	--h5-weight: 700;
-	--h6-weight: 700;
+	--h4-weight: 625;
+	--h5-weight: 650;
+	--h6-weight: 675;
 	--cta-font-weight: 575;
 }
 /* Linux font weight tweak (WIP test if needed on macOS) */
@@ -1291,11 +1291,16 @@ thead,
 =========================== ===========================
 */
 
+/* .markdown-rendered div.el-div + div > :is(h1,h2,h3,h4,h5,h6) {
+  margin-top: var(--heading-spacing);
+} */
+
 /*--> Headings H1-H6 <--*/
 
 .cm-s-obsidian .cm-line.HyperMD-header,
 .markdown-rendered :is(h1,h2,h3,h4,h5,h6) {
 	font-feature-settings: 'cv11' off, 'calt';
+	letter-spacing: unset;
 }
 
 .cm-s-obsidian .cm-line.HyperMD-header-1, 
@@ -1303,14 +1308,17 @@ thead,
 .inline-title {
 	border-bottom: 2px solid var(--hr-color);
 	padding-bottom: 6px;
+	letter-spacing: -0.015em;
 	text-indent: -0.0375em;
 }
 .cm-s-obsidian .cm-line.HyperMD-header-2, 
 .markdown-rendered h2 {
+	letter-spacing: -0.015em;
 	text-indent: -0.01875em;
 }
 .cm-s-obsidian .cm-line.HyperMD-header-3, 
 .markdown-rendered h3 {
+	letter-spacing: -0.015em;
 	text-indent: -0.0125em;
 }
 
